--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -17,7 +17,7 @@
     <h1> About me </h1>
     <p> My name is Afrika Hooks. I am an 8th grader at Whitney Young and member of the WY Girls Who Code club. <br>
         I love coding!!!<br>
-        I want to be a computer engineer/programmer when I grow up.
+        I want to be a computer engineer/programmer when I grow up. Preferably an entreprenur.
     </p>
     <h3> What I like (besides coding) </h3>
      <p id = "likes"> Dancing<br>
@@ -28,8 +28,8 @@
          Etc.
     </p>
     <h2> What I am learning/working on </h2>
-    <p> I am learning Java, Javascript, Python, HTML, and Scratch.<br>
-        I am currently trying to make a platformer in Scratch.<br>
+    <p> I am learning Java, Javascript, Python, and HTML.<br>
+      I want to learn app development.<br>
       <a href="about.html">Go back(I can't get it to work though)</a>
   </body>  
 </html>
