--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -30,6 +30,6 @@
     <h2> What I am learning/working on </h2>
     <p> I am learning Java, Javascript, Python, and HTML.<br>
       I want to learn app development.<br>
-      <a href="about.html">Go back(I can't get it to work though)</a>
+      <a href="https://wygirlswhocode.github.io/about.html">Go back(I can't get it to work though)</a>
   </body>  
 </html>
