--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -15,9 +15,8 @@
 </head>
   <body>
     <h1> About me </h1>
-    <p> My name is Afrika Hooks. I am an 8th grader at Whitney Young and member of the WY Girls Who Code club. <br>
-        I love coding!!!<br>
-        I want to be a computer engineer/programmer when I grow up. Preferably an entreprenur.
+    <p> My name is Afrika Hooks. I am going into 9th grade at Whitney Young and I am a member of the WY Girls Who Code club. <br>
+        I love coding!!! In fact, I want to be a <strong>computer engineer/programmer<strong> when I grow up. Currently, I am thinking about being an entreprenur.
     </p>
     <h3> What I like (besides coding) </h3>
      <p id = "likes"> Dancing<br>
@@ -30,6 +29,6 @@
     <h2> What I am learning/working on </h2>
     <p> I am learning Java, Javascript, Python, and HTML.<br>
       I want to learn app development.<br>
-      <a href="https://wygirlswhocode.github.io/about.html">Go back(I can't get it to work though)</a>
+      <a href="https://wygirlswhocode.github.io/about.html">Go back</a>
   </body>  
 </html>
