--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -16,7 +16,7 @@
   <body>
     <h1> About me </h1>
     <p> My name is Afrika Hooks. I am going into 9th grade at Whitney Young and I am a member of the WY Girls Who Code club. <br>
-        I love coding!!! In fact, I want to be a <strong>computer engineer/programmer<strong> when I grow up. Currently, I am thinking about being an entreprenur.
+        I love coding!!! In fact, I want to be a <strong>computer engineer/programmer</strong> when I grow up. Currently, I am thinking about being an entreprenur.
     </p>
     <h3> What I like (besides coding) </h3>
      <p id = "likes"> Dancing<br>
