--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -29,6 +29,7 @@
     <h2> What I am learning/working on </h2>
     <p> I am learning Java, Javascript, Python, and HTML.<br>
       I want to learn app development.<br>
+      I just started learning SQL on 8-8-17.<br>
       <a href="https://wygirlswhocode.github.io/about.html">Go back</a>
   </body>  
 </html>
