--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -11,13 +11,19 @@
     #likes {
       color: rgb(0, 148, 255);
     }
+    #info {
+      width: 100px;
+      background-color: yellow;
+    }
   </style>
 </head>
   <body>
     <h1> About me </h1>
+    <div id="info">
     <p> My name is Afrika Hooks. I am going into 9th grade at Whitney Young and I am a member of the WY Girls Who Code club. <br>
         I love coding!!! In fact, I want to be a <strong>computer engineer/programmer</strong> when I grow up. Currently, I am thinking about being an entreprenur.
     </p>
+    </div>
     <h3> What I like (besides coding) </h3>
      <p id = "likes"> Dancing<br>
          Playing piano<br>
