--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -15,6 +15,11 @@
       width: 250px;
       background-color: yellow;
     }
+    #goals {
+      width: 250px;
+      border-color: red;
+      border-style: groove;
+    }
   </style>
 </head>
   <body>
@@ -33,9 +38,9 @@
          Etc.
     </p>
     <h2> What I am learning/working on </h2>
-    <p> I am learning Java, Javascript, Python, and HTML.<br>
-      I want to learn app development.<br>
-      I just started learning SQL on 8-8-17.<br>
+    <div id = "goals">
+    <p> I am learning Java, Javascript, Python, HTML, and SQL. This year, I want to learn app development and game development.</p>
+    </div>
       <a href="https://wygirlswhocode.github.io/about.html">Go back</a>
   </body>  
 </html>
