--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -39,7 +39,7 @@
   <p> House: Hufflepuff
   <p> Weaknesses:
     <br id = 'indent'> Spoiled milk (ewww gross)
-    <br id = 'indent'> Cannolis, horchata, dogs, salsa (these are good)
+    <br id = 'indent'> Cannolis, horchata, salsa (these are good)
   <p> Favorite colors: indigo, yellow, pink
 </div>
 
