--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -56,7 +56,7 @@
           <td id = 'memeName'> Kermit
       </tr>
       <tr>
-          <td> <img src = 'https://m.elitestatic.com/m/29f9bbd8221e6daa/student-athlete-hilarious-meme-tweet-4.jpg' class = 'memeImage'> </td>
+          <td> <img src = 'wygirlswhocode.github.io/profiles/dogo.jpg' class = 'memeImage'> </td>
           <td> <img src = 'https://media0ch-a.akamaihd.net/29/54/5997cbc43fda3388f653b4c302ab4c8f.jpg' class = 'memeImage'> </td>
       </tr>
 
