--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -27,7 +27,7 @@
   <body>
     <h1> About me </h1>
     <div id="info">
-    <p> My name is Afrika Hooks. I am going into 9th grade at Whitney Young and I am a member of the WY Girls Who Code club. <br>
+    <p> My name is Afrika Hooks. I am in 10th grade at Whitney Young and I am a member of the WY Girls Who Code club. <br>
         I love coding!!! In fact, I want to be a <strong>computer engineer/programmer</strong> when I grow up. Currently, I am thinking about being an entreprenur.
     </p>
     </div>
