--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -7,17 +7,18 @@
     body {
       background-color: rgb(255, 26, 255);
       font-family: 'Roboto', sans-serif;
+      text-align: center;
     }
     #likes {
       color: rgb(0, 148, 255);
     }
     #info {
-      width: 250px;
+      width: 500px;
       background-color: yellow;
       padding: 5px
     }
     #goals {
-      width: 250px;
+      width: 500px;
       border-color: red;
       border-style: groove;
       padding: 5px;
@@ -27,8 +28,7 @@
   <body>
     <h1> About me </h1>
     <div id="info">
-    <p> My name is Afrika Hooks. I am in 10th grade at Whitney Young and I am a member of the WY Girls Who Code club. <br>
-        I love coding!!! In fact, I want to be a <strong>computer engineer/programmer</strong> when I grow up. Currently, I am thinking about being an entreprenur.
+    <p> My name is Afrika Hooks. I am in 10th grade at Whitney Young and I am a member of the WY Girls Who Code club. I love coding!!! In fact, I want to be a <strong>computer engineer/programmer</strong> when I grow up. Currently, I am thinking about being an entreprenur.
     </p>
     </div>
     <h3> What I like (besides coding) </h3>
