--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -13,11 +13,17 @@
       color: rgb(0, 148, 255);
     }
     #info {
+      position: absolute;
+      top: 50%;
+      right: 50%;
       width: 500px;
       background-color: yellow;
       padding: 5px
     }
     #goals {
+      position: absolute;
+      top: 50%;
+      right: 50%;
       width: 500px;
       border-color: red;
       border-style: groove;
