--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -13,17 +13,15 @@
       color: rgb(0, 148, 255);
     }
     #info {
-      position: absolute;
-      top: 50%;
-      right: 50%;
+      position: relative;
+      right: 75%;
       width: 500px;
       background-color: yellow;
       padding: 5px
     }
     #goals {
-      position: absolute;
-      top: 50%;
-      right: 50%;
+      position: relative;
+      right: 75%;
       width: 500px;
       border-color: red;
       border-style: groove;
